# CPP_Projects

CPP_ex1/: Activation.cpp  Activation.h  CMakeLists.txt  Dense.cpp  Dense.h  Makefile  Matrix.cpp  Matrix.h
cpp_ex2/: CMakeLists.txt  Fractal.cpp  Fractal.h  FractalDrawer.cpp  hey.cpp
cpp_ex3/: CMakeLists.txt  HashMap.hpp  SpamDetector.cpp
